platforms/ios/build/emulator/metadata-generation-stderr-i386.txt
clang version 3.9.0 (tags/RELEASE_390/final)
Target: i386-apple-darwin15.6.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "clang-tool" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "264.3.102" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/3.9.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk" "-isystem" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public" "-isystem" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator/include" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Base/Frameworks" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Maps/Frameworks" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal/" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/usr/local/include"
#include "..." search starts here:
#include <...> search starts here:
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Base/Frameworks (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Maps/Frameworks (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 ../lib/clang/3.9.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/System/Library/Frameworks (framework directory)
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/Library/Frameworks (framework directory)
End of search list.
clang version 3.9.0 (tags/RELEASE_390/final)
Target: i386-apple-darwin15.6.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "objc-metadata-generator" "-cc1" "-triple" "i386-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "yonah" "-target-linker-version" "264.3.102" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/3.9.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk" "-isystem" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public" "-isystem" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator/include" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps" "-I" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Base/Frameworks" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Maps/Frameworks" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal/" "-F/Users/paavovaananen/NativeScript/Wenture/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios" "-D" "COCOAPODS=1" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

clang -cc1 version 3.9.0 based upon LLVM 3.9.0 default target x86_64-apple-darwin15.6.0
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator/include"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public"
ignoring nonexistent directory "/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/Headers/Public/GoogleMaps"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/usr/local/include"
#include "..." search starts here:
#include <...> search starts here:
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/build/emulator (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Base/Frameworks (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Maps/Frameworks (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/internal (framework directory)
 /Users/paavovaananen/NativeScript/Wenture/platforms/ios/../../node_modules/tns-core-modules-widgets/platforms/ios (framework directory)
 ../lib/clang/3.9.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/System/Library/Frameworks (framework directory)
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/Library/Frameworks (framework directory)
End of search list.
In file included from umbrella.h:616:
In file included from /Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Maps/Frameworks/GoogleMaps.framework/Headers/GMSMapView+Animation.h:11:
/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Maps/Frameworks/GoogleMaps.framework/Headers/GMSMapView.h:384:1: warning: no 'assign', 'retain', or 'copy' attribute is specified - 'assign' is assumed [-Wobjc-property-no-attribute]
@property(nonatomic, nullable) GMSCoordinateBounds *cameraTargetBounds;
^
/Users/paavovaananen/NativeScript/Wenture/platforms/ios/Pods/GoogleMaps/Maps/Frameworks/GoogleMaps.framework/Headers/GMSMapView.h:384:1: warning: default property attribute 'assign' not appropriate for non-GC object [-Wobjc-property-no-attribute]
In file included from umbrella.h:772:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator10.2.sdk/usr/include/os/log.h:35:2: error: using os/log.h requires Xcode 8 or later
#error using os/log.h requires Xcode 8 or later
 ^
2 warnings and 1 error generated.
